--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
